--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -46,6 +46,9 @@
     ::file-selector-button {
         border-color: var(--color-gray-200, currentColor);
     }
+    button {
+        cursor: pointer;
+    }
 }
 
 [data-flux-field]:not(ui-radio) {
